# HE-Nav

./: README.md  delete.sh  run_experiment.sh  run_sim.sh
src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml  wheeltec_udev.sh
src/turn_on_wheeltec_robot/include/: Quaternion_Solution.h  wheeltec_robot.h
src/turn_on_wheeltec_robot/launch/: 3d_mapping.launch  3d_navigation.launch  ar_label.launch  mapping.launch  navigation.launch  orb_slam.launch  pure3d_mapping.launch  pure3d_navigation.launch  robot_model_visualization.launch  rrt_slam.launch  simple.launch  turn_on_wheeltec_robot.launch  wheeltec_camera.launch  wheeltec_lidar.launch
src/turn_on_wheeltec_robot/map/: WHEELTEC.pgm  WHEELTEC.yaml  map_saver.launch
src/turn_on_wheeltec_robot/params_costmap_common/: costmap_common_params.yaml  costmap_common_params_pure3d.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/turn_on_wheeltec_robot/params_nav_common/: dwa_local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  wheeltec_smoother.yaml
src/turn_on_wheeltec_robot/scripts/: node_ping.py  send_mark.py  wheeltec_udev.sh
src/turn_on_wheeltec_robot/src/: Quaternion_Solution.cpp  wheeltec_robot.cpp
src/turn_on_wheeltec_robot/urdf/: brushless_senior_diff.urdf  flagship_4wd_bs_robot.urdf  flagship_4wd_dl_robot.urdf  flagship_mec_dl_robot.urdf  four_wheel_diff_bs_robot.urdf  four_wheel_diff_dl_robot.urdf  mec_EightDrive_robot.urdf  mini_4wd_moveit.urdf  mini_4wd_moveit_four.urdf  mini_4wd_moveit_six.urdf  mini_4wd_robot.urdf  mini_akm_robot.urdf  mini_diff_robot.urdf  (+20 more)
(+211 files in other folders)
